# realworld-poem-seaorm

./: README.md
server/: .env.sample  .gitignore  Cargo.toml
server/entity/: Cargo.toml
server/entity/src/: article.rs  article_comment.rs  article_favorite.rs  follow.rs  lib.rs  mod.rs  prelude.rs  user.rs
server/migration/: Cargo.toml
server/migration/src/: m20220101_000001_create_table.rs  main.rs
server/src/: main.rs
server/src/api/: user.rs
server/src/model/: user.rs
server/src/service/: user.rs
