[package]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

# Core dependencies: runtime, HTTP framework and database client.
futures = "0.3"
poem = { version = "1", features = ["static-files"] }
poem-openapi = { version = "1", features = ["swagger-ui"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
